# nouyir

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
nouyir/: core.py  utils.py
scripts/: nouyir
