[metadata]
name = nouyir
version = 0.0.4
description = API tester using yaml and python requests, support etherpad-lite input.
long_description = file: README.md
url = https://github.com/mpaulon/nouyir
author = Michaël PAULON
author_email = michael+nouyir@paulon.org
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
[options]
include_package_data = true
packages = find:
install_requires =
    requests
    pyyaml
    colorlog
